# SimplyGraph

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/org/nsh07/simplygraph/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  funcs.cpp  native-lib.cpp
app/src/main/cpp/exprtk/: CMakeLists.txt  build.sh
app/src/main/cpp/exprtk/src/: CMakeLists.txt
app/src/main/cpp/include/: funcs.h  funcs.hpp
app/src/main/java/org/nsh07/simplygraph/: MainActivity.kt  NativeBridge.kt
app/src/main/java/org/nsh07/simplygraph/ui/: AppScreen.kt
app/src/main/java/org/nsh07/simplygraph/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/org/nsh07/simplygraph/ui/viewModel/: UiState.kt  UiViewModel.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  origin.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/org/nsh07/simplygraph/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
